# search-api

./: .env.example  .gitignore  README.md  pyproject.toml  run.py  uvicorn.toml
src/app/: main.py
src/app/api/v1/: hello.py  router.py  search.py
src/app/core/: config.py  security.py
src/app/schemas/: common.py  search.py
src/app/services/: hello_service.py  search_service.py
